<resources>
    <string name="app_name">Investory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Labels -->
    <string name="home_page">HOME</string>
    <string name="crypto_page">CRYPTO</string>
    <string name="stock_page">STOCK MARKET</string>
    <string name="profile_page">PROFILE</string>
    <string name="add_page">ADD</string>

    <!-- Tabs -->
    <string name="crypto">Crypto</string>
    <string name="stock">Stock Market</string>

    <!-- Under constrain -->
    <string name="change24h">Change, 24 h:</string>
    <string name="price">Price:</string>
    <string name="sum">Amount</string>

    <string name="list_title">Actives List</string>

    <!-- Delete dialog -->
    <string name="delete_dialog">Asset deletion</string>
    <string name="description">Are you shure that you want to delete this asset?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Auth -->
    <string name="welcome">Welcome to the
        Investory</string>
    <string name="register">Sign Up</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- Crypto -->
    <string name="c_title">Enter a asset symbol\nand amount</string>
    <string name="symbol">Enter asset symbol</string>
    <string name="amount">Enter asset amount</string>
    <string name="add">Add</string>
    <string name="exit">Cancel</string>
    <string name="approve">Approve</string>
    <string name="logOut">Log Out</string>

</resources>