<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".auth.AuthFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="72dp"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="32sp"
        android:textColor="@color/b_n_item"
        android:layout_gravity="center"
        android:gravity="center|top"
        android:text="@string/welcome" />

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/welcome_logo"
        android:layout_gravity="center"
        android:layout_margin="64dp" />

    <EditText
        android:id="@+id/emailInput"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordInput"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp" />

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/primary_blue"
        android:textColor="@color/b_n_item"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_blue"
        android:textColor="@color/b_n_item"
        android:textSize="16sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"/>

</LinearLayout>