<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_dialog"
        android:layout_margin="24dp"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/b_n_item"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/legend_text"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:layout_marginHorizontal="24dp"
        android:gravity="center"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_blue"
            android:text="@string/cancel"
            android:textColor="@color/b_n_item"
            android:layout_marginVertical="24dp" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red_button"
            android:text="@string/delete"
            android:textColor="@color/b_n_item"
            android:layout_marginVertical="24dp"
            android:layout_marginStart="24dp" />

    </LinearLayout>

</LinearLayout>