<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".database.AddCryptoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_gravity="center|top"
        android:gravity="center"
        android:layout_margin="32dp"
        android:text="@string/add" />

    <EditText
        android:id="@+id/symbolInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:hint="@string/symbol" />

    <EditText
        android:id="@+id/amountInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:hint="@string/amount" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_blue"
        android:text="@string/add"
        android:textColor="@color/b_n_item"
        android:layout_margin="16dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/decor_2" />

</LinearLayout>