<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        tools:context=".CryptoFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/crypto_page"
            style="@style/Labels"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/b_n_item"
            android:paddingBottom="24dp"
            android:textSize="28sp"
            android:fontFamily="@font/montserrat_bold"
            android:layout_gravity="center" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/crypto_pie_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="16dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/list_title"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/b_n_item"
                android:layout_gravity="start|bottom" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/sort_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end|center"
                android:background="@drawable/sort"
                android:checked="false"
                android:button="@android:color/transparent" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="@string/sum"
                android:textSize="12sp"
                android:textColor="@color/legend_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end|bottom"
                android:text="@string/price"
                android:textSize="12sp"
                android:textColor="@color/legend_text" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_crypto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="112dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/primary_blue"
        android:src="@android:drawable/ic_input_add"/>

</FrameLayout>
